--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <div id="map" style="height: 500px"></div>
   </body>
 </html>
